gcc/testsuite/rust/rustc/ui/parser/do-not-suggest-semicolon-before-array_dg.rs
fn foo() {}

fn bar() -> [u8; 2] {
    foo()
    [1, 3) // { dg-error "" "" { target *-*-* } }
}

fn main() {}

